# MagDriveTaxi

./: .gitignore  Makefile  README.md
Backend/api_v1/: contracts.md
Backend/schemas/: ride.json  user.json
Dock/: DEPLOY.md  Dockerfile.railway  README.md  docker-compose.prod.yml  docker-compose.yml  env.production
Frontend/: Makefile  README.md  build_apk.ps1  pubspec.yaml
Frontend/android/: local.properties
Frontend/android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
Frontend/android/app/src/main/: AndroidManifest.xml
Frontend/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
Frontend/android/app/src/main/kotlin/com/magadrive/: MainActivity.kt
Frontend/android/app/src/main/kotlin/com/magadrive/app/: MainActivity.kt
Frontend/android/app/src/main/kotlin/com/magadrive/magadrive_frontend/: MainActivity.kt
Frontend/assets/map/: style_dark_gold.json  style_dark_gold.tpl.json
Frontend/env/: env.dev  env.prod  env.stage
Frontend/scripts/: generate_map_style.dart  generate_map_style.ps1
Frontend/test/: widget_test.dart
Microservices/api-gateway_py/: Dockerfile  main.py  requirements.txt
Microservices/geo_service_py/: Dockerfile  main.py  requirements.txt
Microservices/pricing_core_cpp/: CMakeLists.txt  Dockerfile  Makefile  http_server.cpp  http_server.h  main.cpp  pricing_engine.cpp  pricing_engine.h
Microservices/ride_service_py/: Dockerfile  main.py  requirements.txt
docs/: T8-T10_INTEGRATION.md
scripts/: generate_map_style.ps1
